--- a/packages/dotori-tailwindcss-scrollbar/package.json
+++ b/packages/dotori-tailwindcss-scrollbar/package.json
@@ -1,25 +1,21 @@
 {
   "name": "dotori-tailwindcss-scrollbar",
-  "version": "0.0.2",
+  "version": "0.0.3",
   "description": "dotori tailwindcss scrollbar plugins",
   "author": "LEE DONG GYU <tenenger7125@gmail.com>",
   "type": "module",
   "homepage": "",
-  "license": "ISC",
-  "main": "dist/index.umd.js",
+  "license": "MIT",
+  "main": "./dist/index.umd.js",
   "module": "./dist/index.es.js",
   "types": "./dist/index.d.ts",
-  "directories": {
-    "lib": "lib"
-  },
   "files": [
-    "lib"
+    "dist"
   ],
   "scripts": {
     "build": "rm -rf ./dist && vite build"
   },
   "devDependencies": {
-    "postcss": "^8.5.3",
     "tailwindcss": "^4",
     "typescript": "^5.8.2",
     "vite": "^6.2.2",
