--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "root",
   "private": false,
   "scripts": {
-    "prepare": "husky install",
+    "prepare": "husky",
     "commit": "cz",
     "prepublishOnly": "lerna run build"
   },
