--- a/packages/dotori-tailwindcss-scrollbar/package.json
+++ b/packages/dotori-tailwindcss-scrollbar/package.json
@@ -16,9 +16,6 @@
     "build": "rm -rf ./dist && vite build"
   },
   "devDependencies": {
-    "tailwindcss": "^4",
-    "typescript": "^5.8.2",
-    "vite": "^6.2.2",
-    "vite-plugin-dts": "^4.5.3"
+    "tailwindcss": "^4"
   }
 }
